Fixed #15: handle module path
Also:
 * Fixed #17: Check that `-m` reads local module files
 * Started to lay groundwork for #5: Support searching class path