@@ -31,8 +31,8 @@ $ juggle --fiddle-de-dee
 Unknown option: '--fiddle-de-dee'
 Usage: juggle [-hVx] [--dry-run] [--show-query] [-c=none|all|auto]
               [-f=auto|plain|colour|color] [-i=packageName] [-j=jarFilePath]
-              [-m=moduleName] [-s=access|hierarchy|name|package|score|text]
-              [declaration...]
+              [-m=moduleName] [-p=modulePath]
+              [-s=access|hierarchy|name|package|score|text] [declaration...]
 An API search tool for Java
       [declaration...]       A Java-style declaration to match against
   -c, --conversions=none|all|auto
@@ -42,8 +42,12 @@ An API search tool for Java
                              Output format
   -h, --help                 Show this help message and exit.
   -i, --import=packageName   Imported package names
-  -j, --jar=jarFilePath      JAR file to include in search
-  -m, --module=moduleName    Modules to search
+  -j, -cp, --classpath, --class-path=jarFilePath
+                             JAR file to include in search
+  -m, --module, --add-modules=moduleName
+                             Modules to search
+  -p, --module-path=modulePath
+                             Where to look for modules
   -s, --sort=access|hierarchy|name|package|score|text
                              Sort criteria
       --show-query           Show query
@@ -58,8 +62,8 @@ Of course, we can explicitly ask for help:
 $ juggle --help
 Usage: juggle [-hVx] [--dry-run] [--show-query] [-c=none|all|auto]
               [-f=auto|plain|colour|color] [-i=packageName] [-j=jarFilePath]
-              [-m=moduleName] [-s=access|hierarchy|name|package|score|text]
-              [declaration...]
+              [-m=moduleName] [-p=modulePath]
+              [-s=access|hierarchy|name|package|score|text] [declaration...]
 An API search tool for Java
       [declaration...]       A Java-style declaration to match against
   -c, --conversions=none|all|auto
@@ -69,8 +73,12 @@ An API search tool for Java
                              Output format
   -h, --help                 Show this help message and exit.
   -i, --import=packageName   Imported package names
-  -j, --jar=jarFilePath      JAR file to include in search
-  -m, --module=moduleName    Modules to search
+  -j, -cp, --classpath, --class-path=jarFilePath
+                             JAR file to include in search
+  -m, --module, --add-modules=moduleName
+                             Modules to search
+  -p, --module-path=modulePath
+                             Where to look for modules
   -s, --sort=access|hierarchy|name|package|score|text
                              Sort criteria
       --show-query           Show query
